Fixed driving faults text on debrief not changing properly, fixed alignment issues

--- a/src/app/pages/debrief/components/eco-debrief-card/eco-debrief-card.scss
+++ b/src/app/pages/debrief/components/eco-debrief-card/eco-debrief-card.scss
@@ -2,4 +2,7 @@
   .fault-heading {
     display:inline;
   }
+  .down-padding {
+    padding-top: 10px;
+  }
 }
